fix bugs and layout issues

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,6 +5,7 @@
 
 .main-content {
   width: 70%;
+  overflow-x: hidden;
 }
 
 section {
@@ -12,7 +13,7 @@ section {
 }
 
 section:last-child {
-  margin-bottom: 0;
+  margin-bottom: 50px;
 }
 
 #main > section {
