--- a/src/components/SideBar/sidebar.module.css
+++ b/src/components/SideBar/sidebar.module.css
@@ -2,6 +2,7 @@
   width: 30%;
   background-color: var(--grey);
   color: white;
+  overflow-x: hidden;
 }
 
 .weather-today {
